harden the single-wiki git providers after review
Attachment delete and directory move now mutate the filesystem inside the
commit lock (the same write+commit bracket page saves use), closing the
window where a concurrent sweep could commit half-done work under the wrong
author, and the duplicated case-safe move logic is one shared helper. The
batch registry drops its multi-wiki repo-key axis: it holds the one
GitPageHistory directly, batches are plain per-user path sets, and commit
takes a CommitUserData instead of three strings. Startup reconciliation now
fires complete events on both buses (sweepUp reports the swept paths), the
attachment provider serves version metadata from the eager index (one repo
walk instead of one git call per attachment, newest-first per the provider
contract) and rejects a storage dir outside the page repository at startup.
Save no-op detection compares bytes instead of UTF-8-decoded strings, and
the page provider logs an error when jspwiki.encoding is not UTF-8, which
the git-side reads require.